--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,4 +1,4 @@
-/* .product-item-container {
+.product-item-container {
   padding: 3px 5px;
   box-shadow: 0px 1px 3px 3px #00000021;
   max-height: 270px;
@@ -33,14 +33,6 @@
   box-shadow: 5px 5px 28px #888888;
 }
 
-/* body {
-  padding: 2rem 0rem;
-}
-
-.like {
-  font-size: 1.5rem;
-} */
-
 .card {
   border-bottom: 1px solid #e4e4e4;
   padding: 10px 15px;
@@ -48,7 +40,7 @@
   height: 350px;
 }
 
-*/ .product-card {
+.product-card {
   background: #fff;
   border-radius: 10px;
   -webkit-border-radius: 10px;
